[project]
name = "ubd-crawler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "instaloader>=4.11",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "ddgs>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
